# csip

./: .ghci  .gitignore  Builtins.csip  LICENSE  README.md  build  csip.cabal  precedences  repl  test.txt
agda/: Stackless.agdai  Stackless.agda~
csip/adt/: 02.csip  03.csip  natCon.csip  powerFast.csip
csip/bugs/: 01.csip  01b.csip  hiddenPat.csip
csip/bugs/fixed/: hiddenPat.csip  meta2.csip  missingLHS.csip
csip/classes/: modelMonad.csip  modelNum.csip  monad.csip  monadPre.csip  num.csip
csip/doc/: 00.csip  04.csip  07.csip  10.csip  13.csip  16.csip  22.csip  24.csip  29.csip  31.csip  35.csip  36.csip  37.csip  39.csip  40.csip  43.csip  45.csip  49.csip  50.csip  52.csip  53.csip  54.csip  56.csip  57.csip  58.csip  59.csip  60.csip  64.csip  69.csip  70.csip  72.csip
csip/errors/: definition_expected.csip  not_a_function.csip
csip/highlight/: 076.csip
csip/metas/: 01.csip  10.csip  11a.csip  11b.csip  11c.csip  11d.csip  14c.csip  16.csip  26.csip  27a.csip  27b.csip  28.csip  stlc1.csip  stlc2.csip
csip/nat/: Succ.csip  matchLit.csip
csip/staging/: eta1b.csip  eta2.csip  eta3.csip  powerFast.csip  powerFast2.csip  vec.csip  vecCont.csip
csip/string/: eq.csip  pattern.csip  patternLit.csip
csip/subtyping/: ArrPi.csip  ArrPiContra.csip  ArrPis.csip  Pi.csip  Pi2.csip  PiArr.csip
csip/syntax/: 001.csip  003.csip  064.csip  077.csip  operator.csip
csip/typecheck/: 075.csip  082.csip
experiment/: CPU.agda  Circom.agda  Closurefree.agda  FunctionalAssembly.hs  Map.hs  OData.agda  PM.agda  Stackless.agda  functionalAssembly.idr  middle.idr
experiment/circom/: Circom.hs  Main.hs
haskell/: M0_Prelude.hs  M1_Base.hs  M2_OpSeq.hs  M3_Parse.hs  M4_Eval.hs  M5_Unify.hs  M6_Elab.hs  M7_Stage.hs  M8_IO.hs  M9_Main.hs
mikrocsip/: MikroCsip.hs  NanoCsip.hs  runtests
mikrocsip/test/: arith.mcsip  arith1.mcsip  dataIdLoc.mcsip  dataIdLocFail.mcsip  dataIdLocProblem.mcsip  fin.mcsip  fun1.mcsip  funId.mcsip  funIdFail.mcsip  funIdLoc.mcsip  funIdLocFail.mcsip  id1.mcsip  id2.mcsip  local.mcsip  localADT.mcsip  map.mcsip  nat.mcsip  natadt.mcsip  not.mcsip  power.mcsip  stlc.mcsip  tree.mcsip
mikrocsip2/: .gitignore  Core.ipkg  CoreA.agda  CoreB.agda  CoreC.agda  CoreC.idr  CoreC2.agda  CoreD.agda  Equ.agda  ExampleC.idr  MikroCsip2.hs  MikroCsipCore.hs  idrisnotes.md  power.csipc  test.csipc  test.txt
mikrocsip2/test/: bug.mcsip  cmp.mcsip  cmp.mcsip.core.core  half.mcsip  half.mcsip.core.core  imp.mcsip  imp.mcsip.core  power.mcsip  power.mcsip.core  powerStaged.mcsip  powerStaged.mcsip.core
mikrocsip3/: Conversion.agda  Csip  Csip.agda  Model.agda  Parser.agda  Prelude.agda  Printer.agda  TCMonad.agda
mikrocsip3/test/: basic.csip  basic.csip.old  bug.csip  church_bool.csip  church_bool.csip.old  church_nat.csip  cmp.csip  eq.csip.old  fib.csip  fib.csip.old  fin.csip  fin.csip.old  fix.csip  fix.csip.old  induction_n0.csip  induction_n0.csip.old  induction_n1.csip  iso.csip  iso.csip.old  list.csip  list.csip.old  machine.csip  monad.csip.old  power.csip  pure_only.csip  pure_only.csip.old  stlc.csip  stlc.csip.old  tree.csip  tree.csip.old  vector.csip  vector.csip.old
mikrocsip4/: Csip.agda
mikrocsip4/test/: basic.csip
perftests/: comments.csip  exptree.csip  lex.csip  scope.csip  structure.csip  sugar.csip
src/: A_Builtins.hs  A_Meta.hs  B0_Builtins.hs  B1_Basic.hs  B2_String.hs  B3_Mem.hs  B3_RefM.hs  B4_Partial.hs  B5_Map.hs  B6_IntMap.hs  B7_StringMap.hs  B8_Doc.hs  B8_OpSeq.hs  B9_IO.hs  B_Base.hs  B_Prelude.hs  Builtins.csip  C1_Name.hs  C2_NameLiterals.hs  C3_Parse.hs  C4_Desug.hs  C5_Scope.hs  C_IntMap.hs  C_Map.hs  C_OpSeq.hs  C_StringMap.hs  C_Syntax.hs  D1_Combinator.hs  D2_Tm.hs  D3_Val.hs  D3_Val.hs-boot  D4_Eval.hs  D5_Pattern.hs  D_Base.hs  D_Calculus.hs  E1_Unify.hs  E2_Conv.hs  E3_Elab.hs  E4_Stage.hs  E_Parse.hs  (+22 more)
test/adt/: case.csip  global.csip  local.csip  natCon.csip  natPat.csip  pair0.csip  pair1.csip  powerFast.csip  viewPattern.csip
test/bugs/: app.csip  arith.csip  bug1.csip  meta3.csip  nis.csip  prelude.csip
test/bugs/fixed/: illegalDo.csip  infType.csip  meta.csip  missingLHS.csip  vLamEta.csip
test/classes/: MTL.csip  double.csip  eq.csip  modelMonad.csip  modelNum.csip  monadPre.csip  num.csip  sub.csip  sub1.csip
test/dependent/: eq.csip  fin.csip  id.csip  with.csip
test/doc/: 01.csip  02.csip  03.csip  05.csip  06.csip  08.csip  09.csip  11.csip  12.csip  13.csip  14.csip  15.csip  17.csip  18.csip  19.csip  20.csip  21.csip  23.csip  25.csip  26.csip  27.csip  28.csip  30.csip  32.csip  33.csip  34.csip  38.csip  41.csip  42.csip  44.csip  46.csip  47.csip  48.csip  51.csip  52.csip  55.csip  56.csip  57.csip  58.csip  61.csip  (+10 more)
test/errors/: eq.csip  mismatched_op.csip  nonlinear.csip  notdefined.csip  stagingIncomplete.csip  unterminated_comment.csip
test/highlight/: 076.csip  077.csip  078.csip
test/import/: a.csip
test/metas/: 00.csip  01.csip  12.csip  13a.csip  13b.csip  14a.csip  14b.csip  14c.csip  15.csip  cons.csip  ids.csip  pruning.csip  pruning1.csip  pruning2.csip  pruning3.csip  pruning4.csip  stlc1.csip  stlc2.csip
test/nat/: Succ.csip  eq.csip  matchLit.csip
test/performance/: layout.csip  layoutA.csip  op.csip  scope.csip  sugar.csip
test/staging/: arith.csip  closurefree.csip  eval.csip  pattern.csip  pattern_simple.csip  powerFast.csip  powerFast2.csip  stackless.csip  vec.csip  vecCont.csip
test/string/: eq.csip  patternCons.csip  patternLit.csip
test/subtyping/: ArrPi.csip  ArrPiContra.csip  ArrPis.csip  Pi.csip  Pi2.csip  PiArr.csip  PiArrs.csip
test/syntax/: 000.csip  001.csip  002.csip
test/typecheck/: 075.csip  simple.csip
