cabal-version: 3.0
name:          csip
version:       0.3.0.0

category:      Compiler
synopsis:      compiler for writing efficient programs with high-level abstractions

description:
  Csip is a minimalistic Agda-like language for writing efficient programs with
  high-level abstractions.

  Csip does staged compilation, without termination checking.

license:       BSD-2-Clause
license-file:  LICENSE
author:        Peter Divianszky
maintainer:    peter.divianszky@faulhornlabs.com

extra-doc-files:
  README.md
extra-source-files:
  .ghci
  test/**/*.csip
  perftests/**/*.csip
data-dir: src
data-files:
  precedences
  Builtins.csip
  Prelude.csip

source-repository head
  type:     git
  location: https://github.com/faulhornlabs/csip

executable csip
  build-depends:
      base       >= 4.0  && < 5.0
    , array      >= 0.5  && < 0.6
    , directory  >= 1.3  && < 1.4

  hs-source-dirs: src
  autogen-modules:
      Paths_csip
  other-modules:
      Paths_csip
    , A_Builtins
    , B_Prelude
    , M0_Map
    , M0_IntMap
    , M0_StringMap
    , M1_Base
    , M2_OpSeq
    , M3_Parse
    , M4_Eval
    , M5_Unify
    , M6_Elab
    , M7_Stage
    , M8_IO
  main-is:
      M9_Main.hs

  default-language:
      Haskell98
  default-extensions:
      RebindableSyntax
    , OverloadedStrings
    , OverloadedLists
    , BlockArguments
    , LambdaCase
    , Strict
    , PatternGuards
    , ViewPatterns
    , PatternSynonyms
    , NoMonomorphismRestriction
    , EmptyDataDecls
    , DataKinds
    , KindSignatures
    , FlexibleInstances
    , FlexibleContexts
    , GeneralizedNewtypeDeriving
    , TypeFamilies
    , ConstraintKinds

  ghc-options:
    -fobject-code
    -Wall
    -Wno-missing-signatures
    -Wno-missing-pattern-synonym-signatures
    -Wno-name-shadowing
    -Wno-orphans
