cabal-version: 3.0
name:          csip
version:       0.4.0.0

category:      Compiler
synopsis:      compiler for writing efficient programs with high-level abstractions

description:
  Csip is a minimalistic Agda-like language for writing efficient programs with
  high-level abstractions.

  Csip supports staged compilation.
  Csip has no termination checking.

license:       BSD-2-Clause
license-file:  LICENSE
author:        Peter Divianszky
maintainer:    peter.divianszky@faulhornlabs.com

extra-doc-files:
  README.md
extra-source-files:
  .ghci
  test/**/*.csip
  perftests/**/*.csip
data-dir: src
data-files:
  precedences
  Builtins.csip
  Prelude.csip

source-repository head
  type:     git
  location: https://github.com/faulhornlabs/csip

executable csip
  build-depends:
      base       >= 4.0  && < 5.0
    , array      >= 0.5  && < 0.6
    , directory  >= 1.3  && < 1.4

  hs-source-dirs: src
  autogen-modules:
      Paths_csip
  other-modules:
      Paths_csip
    -- base libraries
    , A_Builtins
    , B_Prelude
    , C_Map
    , C_IntMap
    , C_StringMap
    , C_OpSeq
    , D_Base
    -- compiler modules
    , E_Parse
    , F_Eval
    , G_Unify
    , H_Elab
    , I_Stage
    -- I/O base library
    , M8_IO
  main-is:
      M9_Main.hs

  default-language:
      Haskell98
  default-extensions:
      RebindableSyntax
    , OverloadedStrings
    , BlockArguments
    , LambdaCase
    , Strict
    , PatternGuards
    , ViewPatterns
    , PatternSynonyms
    , NoMonomorphismRestriction
    , EmptyDataDecls
    , DataKinds
    , KindSignatures
    , FlexibleInstances
    , FlexibleContexts
    , GeneralizedNewtypeDeriving
    , ConstraintKinds

  ghc-options:
    -fobject-code
    -Wall
    -Wno-missing-signatures
    -Wno-missing-pattern-synonym-signatures
    -Wno-name-shadowing
    -Wno-orphans
